--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,10 +8,10 @@ spring:
     url: "jdbc:mysql://localhost:3306/identity_service"
     username: springproject
     password: admin
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 
 
